force-app/main/default/objects/FundingOpportunity/fields/gr_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>gr_Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A name of the Federal agency department that awarded, executed, or is otherwise responsible for the grant transaction.</description>
    <label>Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>