force-app/main/default/objects/FundingOpportunity/fields/gr_Award_Instrument_Characteristics_Type__c.field-meta.xml
<CustomField>
    <fullName>gr_Award_Instrument_Characteristics_Type__c</fullName>
    <description>A collection of codes specifying characteristics of the Federal award instrument, e.g., formula grant, fixed amount award, and block grant.</description>
    <label>Award Instrument Characteristics Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block Grant</fullName>
            </value>
            <value>
                <fullName>Fixed Amount Award</fullName>
            </value>
            <value>
                <fullName>Formula Grant</fullName>
            </value>
            <value>
                <fullName>Project Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>