force-app/main/default/objects/FundingOpportunity/fields/gr_CompetitionNumber__c.field-meta.xml
<CustomField>
    <fullName>gr_CompetitionNumber__c</fullName>
    <label>Competition Identification Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>