force-app/main/default/objects/FundingOpportunity/fields/gr_CompetitionTitle__c.field-meta.xml
<CustomField>
    <fullName>gr_CompetitionTitle__c</fullName>
    <label>Competition Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>