force-app/main/default/objects/FundingOpportunity/fields/gr_Elig_Other_Criteria_Description__c.field-meta.xml
<CustomField>
    <fullName>gr_Elig_Other_Criteria_Description__c</fullName>
    <description>A description of the considerations or factors that determine an applicant or application for an award eligible for the specified funding opportunity (e.g., criteria that have the effect of making an application or project ineligible for Federal award)</description>
    <label>Eligibility Other Criteria Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>