force-app/main/default/objects/FundingOpportunity/fields/gr_Eligibility_Other_Criteria__c.field-meta.xml
<CustomField>
    <fullName>gr_Eligibility_Other_Criteria__c</fullName>
    <description>The considerations or factors used to assess eligibility of an applicant or application for a specified funding opportunity</description>
    <label>Eligibility Other Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Matching</fullName>
            </value>
            <value>
                <fullName>Cost Participation</fullName>
            </value>
            <value>
                <fullName>Cost Sharing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>