force-app/main/default/objects/FundingOpportunity/fields/gr_Funding_Opportunity_Announcement_Ver__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Opportunity_Announcement_Ver__c</fullName>
    <description>A text detailing the version of the initial, modified, or reissued/renewed Notice of Funding Opportunity.</description>
    <label>Funding Opportunity Announcement Version</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>