force-app/main/default/objects/FundingOpportunity/fields/gr_Funding_Opportunity_Description_Text__c.field-meta.xml
<CustomField>
    <fullName>gr_Funding_Opportunity_Description_Text__c</fullName>
    <description>A description of the notice of funding opportunity posted on the OMB-designated government wide web site for finding and applying for Federal financial assistance.</description>
    <label>Funding Opportunity Description Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>