force-app/main/default/objects/FundingOpportunity/fields/gr_FundingOpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>gr_FundingOpportunityNumber__c</fullName>
    <label>Funding Opportunity Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>