force-app/main/default/objects/FundingOpportunity/fields/gr_Grant_Award_Instrument_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Grant_Award_Instrument_Type_Code__c</fullName>
    <label>Grant Award Instrument Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooperative Agreement</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>