force-app/main/default/objects/FundingOpportunity/fields/gr_Indirect_Cost_Rate_Reimburse_Policy__c.field-meta.xml
<CustomField>
    <fullName>gr_Indirect_Cost_Rate_Reimburse_Policy__c</fullName>
    <description>A reference to the Federal or Federal agency-specific policy on indirect cost rate reimbursement applicable to the grant program, including any limitations or exclusions as to types or amount of cost items.</description>
    <label>Indirect Cost Rate Reimbursement Policy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>