force-app/main/default/objects/FundingOpportunity/fields/gr_Merit_Review_And_Selection_Process__c.field-meta.xml
<CustomField>
    <fullName>gr_Merit_Review_And_Selection_Process__c</fullName>
    <description>A description of or reference to the Federal agency&apos;s merit review and selection process for applications for a Federal award of a grant program funding opportunity (e.g., the number of people on an evaluation panel and how it operates, the way reviewers</description>
    <label>Merit Review And Selection Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>