force-app/main/default/objects/FundingOpportunity/fields/gr_Merit_Review_Criteria__c.field-meta.xml
<CustomField>
    <fullName>gr_Merit_Review_Criteria__c</fullName>
    <description>A description of or reference to the Federal agency&apos;s merit review criteria for applications for a Federal award of a grant program funding opportunity.</description>
    <label>Merit Review Criteria</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>