force-app/main/default/objects/FundingOpportunity/fields/gr_Policy_Requirement_Text__c.field-meta.xml
<CustomField>
    <fullName>gr_Policy_Requirement_Text__c</fullName>
    <description>A citation or text indicating the public policy, national policy, or Federal statutory and agency-specific policy for the grant program or Federal award.</description>
    <label>Policy Requirement Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>