force-app/main/default/objects/FundingOpportunity/fields/gr_Stage_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>gr_Stage_Type_Code__c</fullName>
    <description>A code denoting the stage in the lifecycle of the grant program, grant program project, or Federal award project information.</description>
    <label>Stage Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Federal Award</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>