force-app/main/default/objects/FundingOpportunity/recordTypes/gr_Funding_Opportunity_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>gr_Funding_Opportunity_Record_Type</fullName>
    <active>true</active>
    <label>Funding Opportunity Record Type</label>
</RecordType>